[workspace]
members = ["slashery", "slashery-derive"]

[workspace.package]
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2018"

[workspace.dependencies]
darling = "0.13.0"
proc-macro2 = "1.0.29"
quote = "1.0.9"
serde = "1.0.130"
serde_json = "1.0.68"
serde_repr = "0.1.7"
serenity = { version = "0.11.5", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "http", "utils", "rustls_backend", "unstable_discord_api"] }
snafu = "0.6.10"
syn = "1.0.77"