[package]
name = "slashery-derive"
version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
