[package]
name = "slashery"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
serde_json = "1.0.68"
slashery-derive = { path = "../slashery-derive" }
serenity = { version = "=0.11.5", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "http", "utils", "rustls_backend", "unstable_discord_api"] }
serde_repr = "0.1.7"
snafu = "0.6.10"
