[package]
name = "slashery"
version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slashery-derive = { path = "../slashery-derive" }

serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serenity.workspace = true
snafu.workspace = true
